[gd_scene load_steps=9 format=2]

[ext_resource path="res://EnemeyContainer/Basic_enemies/Vapor2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/PngsFiles/Vapor2Sheet.png" type="Texture" id=2]
[ext_resource path="res://IMG_1992.jpg" type="Texture" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/jumpscare:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/jumpscare:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/jumpscare:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0823529, 0.0823529, 0.0823529, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/jumpscare:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.30332, 0.30408 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "jumpscare"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/jumpscare:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/jumpscare:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/jumpscare:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0362294, 0.0363202 ), Vector2( 0.30332, 0.30408 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 37.0135

[sub_resource type="CircleShape2D" id=2]
radius = 45.2769

[sub_resource type="CircleShape2D" id=3]
radius = 304.133

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/jumpscare = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="jumpscare" type="Sprite" parent="CanvasLayer"]
visible = false
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
position = Vector2( 514, 305 )
scale = Vector2( 0.30332, 0.30408 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.0313969, 0.0313969 )
texture = ExtResource( 2 )
hframes = 2
vframes = 2
frame = 1

[node name="JumpScareZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpScareZone"]
shape = SubResource( 2 )

[node name="ChaseZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseZone"]
shape = SubResource( 3 )

[connection signal="area_entered" from="JumpScareZone" to="." method="_on_JumpScareZone_area_entered"]
[connection signal="body_entered" from="ChaseZone" to="." method="_on_ChaseZone_body_entered"]
[connection signal="body_exited" from="ChaseZone" to="." method="_on_ChaseZone_body_exited"]
